tests/NormalTests/paczka1/small_fuzzy/31087700.err
Error in line 3: v3dATa S866 -6,9
Error in line 10: S742 A467 80,68
Error in line 15: OFYlRA S866 12,17
Error in line 5: S742 S402 63,3
